--- a/app/src/main/res/layout/activity_favoritespage.xml
+++ b/app/src/main/res/layout/activity_favoritespage.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Favorites"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/crossImage"
+            app:layout_constraintStart_toEndOf="@id/crossicon"
             android:layout_marginTop="26dp"
             android:layout_marginLeft="30dp"
             android:gravity="center"
