--- a/app/src/main/res/layout/activity_payment_method.xml
+++ b/app/src/main/res/layout/activity_payment_method.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     android:padding="20dp">
 
+    <ImageView
+        android:id="@+id/cross"
+        app:srcCompat="@drawable/cross"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="20dp"
+        android:adjustViewBounds="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="@id/paymentMethodTitle"
+        android:onClick="dismissBottomSheet" />
 
     <TextView
         android:id="@+id/paymentMethodTitle"
@@ -13,51 +26,44 @@
         android:fontFamily="@font/lato"
         android:text="Pay with"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="20sp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="23sp" />
 
-    <CheckBox
-        android:id="@+id/Card"
+
+    <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/lato"
-        android:text="Credit/Debit Card"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/paymentMethodTitle" />
+        android:id="@+id/payment_method_group"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/paymentMethodTitle"
+        android:textSize="20sp">
 
-    <CheckBox
-        android:id="@+id/DBS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/lato"
-        android:text="DBS PayLuh"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/paypal" />
+        <RadioButton
+            android:id="@+id/Card"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Credit/Debit Card" />
 
-    <CheckBox
-        android:id="@+id/PayNow"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/lato"
-        android:text="PayNow Transfer"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/DBS" />
+        <RadioButton
+            android:id="@+id/DBS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DBS" />
 
-    <CheckBox
-        android:id="@+id/paypal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:fontFamily="@font/lato"
-        android:text="PayPal balance"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Card" />
+        <RadioButton
+            android:id="@+id/PayNow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PayNow" />
+
+        <RadioButton
+            android:id="@+id/paypal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Paypal" />
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/payButton"
@@ -65,15 +71,21 @@
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="Pay"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintTop_toBottomOf="@id/payment_method_group"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.407" />
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="20dp"/>
 
-
-
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        app:layout_constraintTop_toBottomOf="@id/payment_method_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="20dp"
+        android:onClick="dismissBottomSheet" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
